Sandbox/01-02-2025/force-app/main/default/objects/Supply_Database_Archive__b/Supply_Database_Archive__b.object-meta.xml
<CustomObject>
    <label>Supply Database Archive</label>
    <pluralLabel>Supply Database Archives</pluralLabel>
</CustomObject>