Sandbox/01-02-2025/force-app/main/default/objects/Supply_Database_Archive__b/fields/Adjustment_33Across_USD__c.field-meta.xml
<CustomField>
    <fullName>Adjustment_33Across_USD__c</fullName>
    <label>Adjustment - 33Across (USD)</label>
    <precision>18</precision>
    <scale>10</scale>
    <type>Number</type>
</CustomField>