Sandbox/01-02-2025/force-app/main/default/objects/Supply_Database_Archive__b/fields/Data_Supplier_Account__c.field-meta.xml
<CustomField>
    <fullName>Data_Supplier_Account__c</fullName>
    <label>Data Supplier Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Supply Database Archives</relationshipLabel>
    <relationshipName>Supply_Database_Archives</relationshipName>
    <type>Lookup</type>
</CustomField>