Sandbox/01-02-2025/force-app/main/default/objects/Supply_Database_Archive__b/fields/Data_Supplier_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Data_Supplier_Account_Name__c</fullName>
    <label>Data Supplier Account Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>