Sandbox/01-02-2025/force-app/main/default/objects/Supply_Database_Archive__b/fields/Net_Earnings_Final_USD__c.field-meta.xml
<CustomField>
    <fullName>Net_Earnings_Final_USD__c</fullName>
    <label>Net Earnings Final (USD)</label>
    <precision>18</precision>
    <scale>10</scale>
    <type>Number</type>
</CustomField>