Sandbox/01-02-2025/force-app/main/default/objects/Supply_Database_Archive__b/fields/Segment_Key_Raw__c.field-meta.xml
<CustomField>
    <fullName>Segment_Key_Raw__c</fullName>
    <label>Segment Key Raw</label>
    <length>250</length>
    <type>Text</type>
</CustomField>