Sandbox/01-02-2025/force-app/main/default/objects/Supply_Database_Archive__b/fields/Segments_Database_Number__c.field-meta.xml
<CustomField>
    <fullName>Segments_Database_Number__c</fullName>
    <label>Segments Database Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>